compiler/tests/en/errors/dup_field.salam
// EXPECT: E027
struct P:
    x : int = 0
    x : int = 1
end

func main: end
